# Jolteon

./: .gitignore  README.md  aws_setup.sh  requirements.txt
ML-Pipeline/: README.md
ML-Pipeline/src/: deploy_Aggregate.sh  deploy_PCA.sh  deploy_Test.sh  deploy_Train.sh
ML-Pipeline/src/LGB-Code/: Dockerfile  aggregate.py  lambda_function.py  test.py  train.py  utils.py
ML-Pipeline/src/PCA/: lambda_function.py
TPC-DS/: README.md
TPC-DS/DSGen/: README  query.sql  schema.sql  tpcds_gen.sh
TPC-DS/src/: README.md  dsq95.py  lambda_function.py  meta_data.py  utils.py
Terasort/: lambda-con.py  perf.py  perf_model.py
Terasort/src/: CMakeLists.txt  Makefile  README.md  csortlib.cpp  csortlib.h  io.cpp  io.h  main.cpp  part1
Video-Analytics/: README.md  depoly_classify.sh  depoly_extract.sh  depoly_preprocess.sh  depoly_split.sh
Video-Analytics/dataset/: MUSIC_video_list.txt  NEWS_video_list.txt  README.md  clip.py  crawler.py  upload_s3.py  video_list.py
Video-Analytics/src/: Dockerfile  classify.Dockerfile  classify.py  extract.py  lambda_function.py  preprocess.py  split.py  utils.py
params/: ML-Pipeline_params.json
profiles/: ML-Pipeline_profile.json  Video-Analytics_profile.json  tpcds-dsq95_profile.json
workflow/: ML-pipeline.json  README.md  Video-analytics.json  config.json  perf_model.py  perf_model_analytic.py  perf_model_dist.py  plot.py  scheduler.py  stage.py  tpcds-dsq95.json  workflow.py
workflow/utils/: __init__.py  basic_class.py  log_analyze.py  myprocess.py  mythread.py  s3_api.py  solver.py  test_optimizer.py
(+4 files in other folders)
